--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,22 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Dependencies
+node_modules/
 
-node_modules
-dist
-dist-ssr
-*.local
+# Build output
+dist/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Local env
+.env
+.env.*
+!.env.example
+
+# TS incremental + build garbage
+*.tsbuildinfo
+
+# Accidental tsc outputs (we do not emit JS/DT in src)
+src/**/*.js
+src/**/*.d.ts
+
+# IDE
+.vscode/
+.idea/
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
