--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run typecheck && npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -r git@github-scndep:a-maksimov/scn-editor.git"
   },
   "dependencies": {
     "antd": "^5.26.5",
